# Autonomous-Research-Agent

./: main.py  pyproject.toml
LLMs/: __init__.py  models.py
agents/: __init__.py  analyst.py  director.py  planner.py  researcher.py  writer.py
config/: tasks.yaml
research_crew/: pyproject.toml
research_crew/src/research_crew/: crew.py  main.py
research_crew/src/research_crew/config/: agents.yaml  tasks.yaml
research_crew/src/research_crew/llms/: __init__.py  models.py
research_crew/src/research_crew/tools/: __init__.py  wiki_tool.py
tasks/: __init__.py  analyst.py  director.py  planner.py  researcher.py  writer.py
tools/: __init__.py  arxiv_tool.py  web_tool.py  wiki_tool.py
workflows/: research_flow.py
