[project]
name = "autonomous-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "crewai[tools]>=1.10.0",
    "feedparser>=6.0.12",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-mistralai>=1.1.1",
    "litellm>=1.81.16",
    "wikipedia>=1.4.0",
]
